# sfm-mvs-pipeline

./: .gitignore  README.md  pyproject.toml
configs/: aruco.yaml  colmap.yaml  colmap_exhaustive.yaml  evaluation.yaml  mesh.yaml
docs/: NEXT_STEPS.md  fusion_masks_report.md  head_crop_center_fix_report.md  membrane_filter_report.md  mesh_quality_report.md
scripts/: resume_from_dense.py  resume_from_mvs.py  run_masked_exhaustive.sh  run_pipeline.py
src/sfm_mvs_pipeline/: __init__.py
src/sfm_mvs_pipeline/evaluation/: metrics.py
src/sfm_mvs_pipeline/mesh/: surface_reconstruction.py
src/sfm_mvs_pipeline/mvs/: dense_reconstruction.py  fusion.py  mask_undistortion.py
src/sfm_mvs_pipeline/pipeline/: orchestration.py
src/sfm_mvs_pipeline/postprocess/: membrane_filter.py  point_cloud_filter.py
src/sfm_mvs_pipeline/scale/: aruco_scale.py  layout_check.py  policy.py  self_consistency.py
src/sfm_mvs_pipeline/sfm/: feature_extraction.py  feature_matching.py  reconstruction.py
src/sfm_mvs_pipeline/visualization/: plotly_viz.py
tests/: test_evaluation.py  test_head_crop.py  test_layout_check.py  test_manifest_provenance.py  test_mask_undistortion.py  test_membrane_filter.py  test_mesh.py  test_mvs.py  test_plotly_viz.py  test_point_cloud_filter.py  test_reconstruction.py  test_scale.py  test_scale_policy.py  test_scale_policy_cli.py  test_scale_self_consistency.py  test_scale_status_manifest.py  test_sfm.py
